--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
     env:
       TF_VAR_pads_auth_token: ${{ secrets.PADS_AUTH_TOKEN }}
     steps:
+      - name: Echo event name
+        run: echo ${github.event_name}
+
       - name: Checkout
         uses: actions/checkout@v3
 
