--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,29 +51,7 @@ jobs:
         id: plan
         run: terraform plan -no-color -out tfplan.out
 
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@master
-        with:
-          name: tfplan
-          path: tfplan.out
-
-  apply:
-    environment: staging-manual
-    defaults:
-      run:
-        working-directory: ./infra/staging
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.3.7
-
-      - name: Download Terraform Plan
-        uses: actions/download-artifact@master
-        with:
-          name: tfplan
-          path: tfplan.out
-
-      - name: Apply Terraform Plan
+      - name: Terraform apply
+        environment: staging-manual
+        id: apply
         run: terraform apply "tfplan.out"
