--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
         run: terraform plan -no-color
 
   apply:
-    if: needs.plan.result == 'success'
+    if: always() && needs.plan.result == 'success'
     concurrency:
       group: ${{ github.head_ref }}-apply
       cancel-in-progress: true
