--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Restore Cached Terraform Deps
+        id: cache-deps
+        uses: actions/cache@v3
+        with:
+          path: |
+            infra/staging/.terraform
+          key: ${{ runner.os }}-terraform-deps
+
       - name: Setup Python 3.8
         uses: actions/setup-python@v4
         with:
@@ -61,7 +69,7 @@ jobs:
           path: |
             infra/staging/tfplan.out
             infra/staging/builds/
-          key: ${{ runner.os }}-terraform
+          key: ${{ runner.os }}-terraform-plan
 
   apply:
     needs: [plan]
@@ -90,14 +98,14 @@ jobs:
         with:
           terraform_version: 1.3.7
 
-      - name: Cache Terraform Plan
+      - name: Restore Terraform Plan
         id: cache-plan-restore
         uses: actions/cache/restore@v3
         with:
           path: |
             infra/staging/tfplan.out
             infra/staging/builds/
-          key: ${{ runner.os }}-terraform
+          key: ${{ runner.os }}-terraform-plan
 
       - name: Terraform Apply
         id: apply
