--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Restore Cached Terraform Deps
+      - name: Cache Terraform Deps
         id: cache-deps
         uses: actions/cache@v3
         with:
@@ -97,6 +97,14 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.3.7
+
+      - name: Restore Terraform Deps
+        id: cache-plan-restore
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            infra/staging/.terraform
+          key: ${{ runner.os }}-terraform-deps
 
       - name: Restore Terraform Plan
         id: cache-plan-restore
