--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -99,7 +99,7 @@ jobs:
           terraform_version: 1.3.7
 
       - name: Restore Terraform Deps
-        id: cache-plan-restore
+        id: cache-deps-restore
         uses: actions/cache/restore@v3
         with:
           path: |
