Add missing quotes in GHA script
Signed-off-by: Jordan Allen <jordan@jordanallen.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,5 +138,5 @@ jobs:
             github.rest.actions.deleteActionsCacheByKey({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              key: terraform-plan,
+              key: "terraform-plan",
             })
