--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -out tfplan.out
+        run: terraform plan -out tfplan.out
 
       - name: Cache Terraform Plan
         id: cache-plan-save
