--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,8 @@ jobs:
       run:
         working-directory: ./infra/staging
     runs-on: ubuntu-latest
+    env:
+      TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
     steps:
       - name: Checkout
         uses: actions/checkout@v3
