--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out tfplan.out
+        run: terraform plan -detailed-exitcode -out tfplan.out
 
       - name: Cache Terraform Plan
         id: cache-plan-save
@@ -76,7 +76,7 @@ jobs:
 
   apply:
     needs: [plan]
-    if: always() && needs.plan.result == 'success'
+    if: always() && needs.plan.result == 'success' && needs.plan.outputs.planExitcode == 2
     concurrency:
       group: ${{ github.head_ref }}-apply
     environment: staging-manual
