Set planExitcode output
Signed-off-by: Jordan Allen <jordan@jordanallen.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,8 @@ jobs:
             infra/staging/tfplan.out
             infra/staging/builds/
           key: terraform-plan
+    outputs:
+      planExitcode: ${{ steps.plan.outputs.exitcode }}
 
   apply:
     needs: [plan]
