--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,12 @@ jobs:
   plan:
     concurrency:
       group: ${{ github.head_ref }}-plan
-    environment: staging
     defaults:
       run:
         working-directory: ./infra/staging
     runs-on: ubuntu-latest
     env:
-      TF_VAR_pads_auth_token: ${{ secrets.PADS_AUTH_TOKEN }}
+      TF_VAR_pads_auth_token: ${{ secrets.STAGING_PADS_AUTH_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -81,7 +80,7 @@ jobs:
     if: always() && needs.plan.result == 'success' && needs.plan.outputs.planExitcode == 2
     concurrency:
       group: ${{ github.head_ref }}-apply
-    environment: staging-manual
+    environment: staging
     defaults:
       run:
         working-directory: ./infra/staging
