--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,14 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Cache Terraform
+      - name: Cache Terraform Deps
+        id: cache-deps
         uses: actions/cache@v3
         with:
-          path: infra/staging
-          key: terraform
+          path: |
+            infra/staging/.terraform.lock.hcl
+            infra/staging/.terraform
+          key: terraform-deps
 
       - name: Setup Python 3.8
         uses: actions/setup-python@v4
@@ -61,14 +64,14 @@ jobs:
         id: plan
         run: terraform plan -detailed-exitcode -out tfplan.out
 
-      # - name: Cache Terraform Plan
-      #   id: cache-plan-save
-      #   uses: actions/cache/save@v3
-      #   with:
-      #     path: |
-      #       infra/staging/tfplan.out
-      #       infra/staging/builds/
-      # key: terraform-plan
+      - name: Cache Terraform Plan
+        id: cache-plan-save
+        uses: actions/cache/save@v3
+        with:
+          path: |
+            infra/staging/tfplan.out
+            infra/staging/builds/
+          key: terraform-plan
     outputs:
       planExitcode: ${{ steps.plan.outputs.exitcode }}
 
@@ -101,36 +104,39 @@ jobs:
         with:
           terraform_version: 1.3.7
 
-      - name: Restore Terraform Cache
+      - name: Restore Terraform Deps
+        id: cache-deps-restore
         uses: actions/cache/restore@v3
         with:
-          path: infra/staging
-          key: terraform
+          path: |
+            infra/staging/.terraform.lock.hcl
+            infra/staging/.terraform
+          key: terraform-deps
 
-      # - name: Restore Terraform Plan
-      #   id: cache-plan-restore
-      #   uses: actions/cache/restore@v3
-      #   with:
-      #     path: |
-      #       infra/staging/tfplan.out
-      #       infra/staging/builds/
-      #     key: terraform-plan
+      - name: Restore Terraform Plan
+        id: cache-plan-restore
+        uses: actions/cache/restore@v3
+        with:
+          path: |
+            infra/staging/tfplan.out
+            infra/staging/builds/
+          key: terraform-plan
 
       - name: Terraform Apply
         id: apply
         run: terraform apply -auto-approve "tfplan.out"
 
-  # clean:
-  #   needs: [apply]
-  #   if: always()
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Clear Plan Cache
-  #       uses: actions/github-script@v6
-  #       with:
-  #         script: |
-  #           github.rest.actions.deleteActionsCacheByKey({
-  #             owner: context.repo.owner,
-  #             repo: context.repo.repo,
-  #             key: "terraform-plan",
-  #           })
+  clean:
+    needs: [apply]
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clear Plan Cache
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.actions.deleteActionsCacheByKey({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              key: "terraform-plan",
+            })
