--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,13 @@ jobs:
         with:
           terraform_version: 1.3.7
 
+      - name: Cache Terraform
+        uses: actions/cache@v3
+        with:
+          path: ${{ inputs.terraform-root-path }}
+          key: terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: terraform-
+
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
@@ -86,39 +93,13 @@ jobs:
         with:
           terraform_version: 1.3.7
 
-      - name: Restore Terraform Deps
-        id: cache-deps-restore
-        uses: actions/cache/restore@v3
+      - name: Cache Terraform
+        uses: actions/cache@v3
         with:
-          path: |
-            infra/staging/.terraform.lock.hcl
-            infra/staging/.terraform
-          key: terraform-deps
-
-      - name: Restore Terraform Plan
-        id: cache-plan-restore
-        uses: actions/cache/restore@v3
-        with:
-          path: |
-            infra/staging/tfplan.out
-            infra/staging/builds/
-          key: terraform-plan
+          path: ${{ inputs.terraform-root-path }}
+          key: terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: terraform-
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve "tfplan.out"
-
-  clean:
-    needs: [apply]
-    if: always()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clear Plan Cache
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.actions.deleteActionsCacheByKey({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              key: "terraform-plan",
-            })
+        run: terraform apply -auto-approve
