Fix exitcode output
Signed-off-by: Jordan Allen <jordan@jordanallen.org>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,7 +69,7 @@ jobs:
         id: plan
         run: terraform plan -detailed-exitcode
     outputs:
-      planExitcode: ${{ steps.plan.outputs.planExitcode }}
+      planExitcode: ${{ steps.plan.outputs.exitcode }}
 
   apply:
     needs: [plan]
