--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,6 +109,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-terraform-
 
+      - name: Terraform Init
+        run: terraform init
+
       - name: Terraform Apply
         id: apply
         run: terraform apply -auto-approve
