--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
+            ./infra/staging/.terraform
             ~/.terraform.d/plugin-cache
           key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
           restore-keys: |
@@ -111,6 +112,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           path: |
+            ./infra/staging/.terraform
             ~/.terraform.d/plugin-cache
           key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
           restore-keys: |
@@ -139,3 +141,4 @@ jobs:
               repo: context.repo.repo,
               key: "terraform-plan",
             })
+        continue-on-error: true
