--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,142 +5,19 @@ on:
     branches:
       - main
 
-env:
-  TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
+# env:
+#   TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
 
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  plan:
-    timeout-minutes: 5
-    defaults:
-      run:
-        working-directory: ./infra/staging
-    runs-on: ubuntu-latest
-    env:
-      TF_VAR_pads_auth_token: ${{ secrets.STAGING_PADS_AUTH_TOKEN }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.3.7
-
-      - name: Config Terraform Plugin Cache
-        run: |
-          echo 'plugin_cache_dir="$HOME/.terraform.d/plugin-cache"' >~/.terraformrc
-          mkdir --parents ~/.terraform.d/plugin-cache
-
-      - name: Cache Terraform Plugins
-        uses: actions/cache@v3
-        with:
-          path: |
-            ./infra/staging/.terraform.lock.hcl
-            ./infra/staging/.terraform
-            ~/.terraform.d/plugin-cache
-          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
-          restore-keys: |
-            ${{ runner.os }}-terraform-
-
-      - name: Terraform fmt
-        run: terraform fmt -check
-
-      - name: Terraform Init
-        run: terraform init -input=false -backend-config=../backend.conf
-
-      - name: Terraform Validate
-        run: terraform validate -no-color
-
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -detailed-exitcode -out tfplan.out
-
-      - name: Cache Terraform Plan
-        uses: actions/cache/save@v3
-        with:
-          path: infra/staging/tfplan.out
-          key: terraform-plan
-    outputs:
-      planExitcode: ${{ steps.plan.outputs.exitcode }}
-
-  apply:
-    needs: [plan]
-    if: always() && needs.plan.result == 'success' && needs.plan.outputs.planExitcode == 2
-    environment: staging
-    timeout-minutes: 20
-    defaults:
-      run:
-        working-directory: ./infra/staging
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-region: us-east-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-      - name: Setup Python 3.8
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.8"
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.3.7
-
-      - name: Cache Plugin Restore
-        uses: actions/cache/restore@v3
-        with:
-          path: |
-            ./infra/staging/.terraform.lock.hcl
-            ./infra/staging/.terraform
-            ~/.terraform.d/plugin-cache
-          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
-          restore-keys: |
-            ${{ runner.os }}-terraform-
-
-      - name: Restore Terraform Plan
-        uses: actions/cache/restore@v3
-        with:
-          path: infra/staging/tfplan.out
-          key: terraform-plan
-
-      - name: Terraform Apply
-        run: terraform apply -input=false -auto-approve "tfplan.out"
-
-  clean:
-    needs: [apply]
-    if: always()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clear Plan Cache
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.actions.deleteActionsCacheByKey({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              key: "terraform-plan",
-            })
-        continue-on-error: true
+  call-workflow-test:
+    uses: Psychoanalytic-Electronic-Publishing/PEP-Subscription-Utility/.github/workflows/reusable-deploy.yml@PEP-b44382e6/use-github-actions-for-infra-deployment
+    with:
+      module-path: ./infra/staging
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      PADS_AUTH_TOKEN: ${{ secrets.STAGING_PADS_AUTH_TOKEN }}
