--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
     secrets:
-      AWS_ACCESS_KEY:
+      AWS_ACCESS_KEY_ID:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
