--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,7 +1,9 @@
 name: Plan and deploy infrastructure
 
 on:
-  push: [main]
+  push:
+    branches:
+      - main
 
 concurrency:
   group: ${{ github.ref }}
