--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -15,8 +15,8 @@ on:
         required: true
       AWS_SECRET_ACCESS_KEY:
         required: true
-      PADS_AUTH_TOKEN:
-        required: true
+      TERRAFORM_ENV_VARS:
+        required: false
 
 env:
   TF_RECREATE_MISSING_LAMBDA_PACKAGE: false
@@ -28,8 +28,6 @@ jobs:
       run:
         working-directory: ${{ inputs.module-path }}
     runs-on: ubuntu-latest
-    env:
-      TF_VAR_pads_auth_token: ${{ secrets.PADS_AUTH_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -78,7 +76,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -detailed-exitcode -out tfplan.out
+        run: ${{ secrets.TERRAFORM_ENV_VARS }} terraform plan -detailed-exitcode -out tfplan.out
 
       - name: Cache Terraform Plan
         uses: actions/cache/save@v3
