--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -77,6 +77,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: ${{ secrets.TERRAFORM_ENV_VARS }} terraform plan -detailed-exitcode -out tfplan.out
+        shell: bash
 
       - name: Cache Terraform Plan
         uses: actions/cache/save@v3
