--- a/.github/workflows/reusable-deploy.yml
+++ b/.github/workflows/reusable-deploy.yml
@@ -39,6 +39,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
+      - name: Configure TF_VARS
+        if: ${{ secrets.TERRAFORM_ENV_VARS }}
+        run: echo "${{ secrets.TERRAFORM_ENV_VARS }}" >> $GITHUB_ENV
+
       - name: Setup Python 3.8
         uses: actions/setup-python@v4
         with:
@@ -76,8 +80,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: ${{ secrets.TERRAFORM_ENV_VARS }} terraform plan -detailed-exitcode -out tfplan.out
-        shell: bash
+        run: terraform plan -detailed-exitcode -out tfplan.out
 
       - name: Cache Terraform Plan
         uses: actions/cache/save@v3
