--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -17,4 +17,4 @@ jobs:
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      TERRAFORM_ENV_VARS: TF_VAR_pads_auth_token=${{ secrets.PRODUCTION_PADS_AUTH_TOKEN}}
+      ENV_VARS: TF_VAR_pads_auth_token=${{ secrets.PRODUCTION_PADS_AUTH_TOKEN}}
