--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   infrastructure:
-    uses: jordanallen-dev/reusable-terraform-workflow/workflow.yml@main
+    uses: jordanallen-dev/reusable-terraform-workflow/.github/workflows/terraform.yml@main
     with:
       module-path: ./infra/staging
     secrets:
