--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,6 +14,7 @@ jobs:
     uses: jordanallen-dev/reusable-terraform-workflow/.github/workflows/terraform.yml@main
     with:
       module-path: ./infra/production
+      apply-environment: production
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
