--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,7 @@ jobs:
     with:
       module-path: infra/staging
       apply-environment: staging
+      s3-cache-bucket: pep-terraform-build-cache
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
